Overflow & Fixed top

--- a/src/App.css
+++ b/src/App.css
@@ -4,5 +4,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  overflow-x: hidden;
+
   
 }
