--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -4,6 +4,12 @@
   box-sizing: content-box;
   width: 100%;
   top: 0;
+  overflow-x: hidden;
+}
+
+.body{
+
+  overflow-x: hidden;
 
 }
 
